--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -234,7 +234,7 @@ jobs:
       - name: Release Firmware
         env:
           PRIVATE_REPO_NAME: ${{ vars.PRIVATE_REPO_NAME }}
-        uses: softprops/action-gh-release@master
+        uses: softprops/action-gh-release@v2
         with:
           repository: ${{ vars.PRIVATE_REPO_NAME }}
           token: ${{ secrets.MY_TOKEN }}
